--- a/src/PlannerApp/PlannerApp.csproj
+++ b/src/PlannerApp/PlannerApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.FluentValidation" Version="2.0.3" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
@@ -18,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PlaneerApp.Client.Services\PlannerApp.Client.Services.csproj" />
     <ProjectReference Include="..\PlannerApp.Shared\PlannerApp.Shared.csproj" />
   </ItemGroup>
 
