--- a/src/PlannerApp/Properties/launchSettings.json
+++ b/src/PlannerApp/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7227;http://localhost:5227",
+      "applicationUrl": "https://localhost:7227;http://localhost:5227;https://0.0.0.0:7227",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
